verilog_langserver/verilog_parser/antlr_build/WorkspaceSymbolParser.py
# Generated from C:\Users\eirik\Desktop\verilog-langserver\verilog_langserver\verilog_parser/grammar/WorkspaceSymbol.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class WorkspaceSymbolParser ( Parser ):

    grammarFileName = "WorkspaceSymbol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'module'", "'endmodule'", "'interface'", 
                     "'endinterface'", "'program'", "'endprogram'", "'package'", 
                     "'endpackage'", "'config'", "'endconfig'", "'virtual'", 
                     "'class'", "'endclass'", "'task'", "'endtask'", "'function'", 
                     "'endfunction'", "'typedef'", "'#('", "'void'", "'static'", 
                     "'automatic'", "'$root'", "<INVALID>", "<INVALID>", 
                     "' '", "'\t'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "':'", 
                     "','", "'='", "'?'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SINGLELINE_COMMENT", "MULTILINE_COMMENT", "SPACE", 
                      "TAB", "NEWLINE", "String", "COMPILER_DIRECTIVE", 
                      "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", 
                      "OpenBrace", "CloseBrace", "SemiColon", "Colon", "Comma", 
                      "Assign", "QuestionMark", "Dot", "Operators", "Number", 
                      "IntegralNumber", "RealNumber", "UnsignedNumber", 
                      "DecimalNumber", "BinaryNumber", "OctalNumber", "HexNumber", 
                      "UnbasedUnsizedLiteral", "Time", "Word" ]

    RULE_source = 0
    RULE_declaration = 1
    RULE_module_declaration = 2
    RULE_interface_declaration = 3
    RULE_program_declaration = 4
    RULE_package_declaration = 5
    RULE_config_declaration = 6
    RULE_class_declaration = 7
    RULE_package_item = 8
    RULE_task_declaration = 9
    RULE_function_declaration = 10
    RULE_type_declaration = 11
    RULE_parameter_port_list = 12
    RULE_port_list = 13
    RULE_return_val = 14
    RULE_life_time = 15
    RULE_identifier = 16
    RULE_label = 17
    RULE_hierarchical_identifier = 18
    RULE_constant_bit_select = 19

    ruleNames =  [ "source", "declaration", "module_declaration", "interface_declaration", 
                   "program_declaration", "package_declaration", "config_declaration", 
                   "class_declaration", "package_item", "task_declaration", 
                   "function_declaration", "type_declaration", "parameter_port_list", 
                   "port_list", "return_val", "life_time", "identifier", 
                   "label", "hierarchical_identifier", "constant_bit_select" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    SINGLELINE_COMMENT=24
    MULTILINE_COMMENT=25
    SPACE=26
    TAB=27
    NEWLINE=28
    String=29
    COMPILER_DIRECTIVE=30
    OpenBracket=31
    CloseBracket=32
    OpenParen=33
    CloseParen=34
    OpenBrace=35
    CloseBrace=36
    SemiColon=37
    Colon=38
    Comma=39
    Assign=40
    QuestionMark=41
    Dot=42
    Operators=43
    Number=44
    IntegralNumber=45
    RealNumber=46
    UnsignedNumber=47
    DecimalNumber=48
    BinaryNumber=49
    OctalNumber=50
    HexNumber=51
    UnbasedUnsizedLiteral=52
    Time=53
    Word=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(WorkspaceSymbolParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorkspaceSymbolParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(WorkspaceSymbolParser.DeclarationContext,i)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_source

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSource" ):
                listener.enterSource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSource" ):
                listener.exitSource(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource" ):
                return visitor.visitSource(self)
            else:
                return visitor.visitChildren(self)




    def source(self):

        localctx = WorkspaceSymbolParser.SourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << WorkspaceSymbolParser.T__0) | (1 << WorkspaceSymbolParser.T__2) | (1 << WorkspaceSymbolParser.T__4) | (1 << WorkspaceSymbolParser.T__6) | (1 << WorkspaceSymbolParser.T__8) | (1 << WorkspaceSymbolParser.T__10) | (1 << WorkspaceSymbolParser.T__11) | (1 << WorkspaceSymbolParser.T__13) | (1 << WorkspaceSymbolParser.T__15) | (1 << WorkspaceSymbolParser.T__17))) != 0):
                self.state = 40
                self.declaration()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(WorkspaceSymbolParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Module_declarationContext,0)


        def interface_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Interface_declarationContext,0)


        def program_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Program_declarationContext,0)


        def package_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Package_declarationContext,0)


        def package_item(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Package_itemContext,0)


        def config_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Config_declarationContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = WorkspaceSymbolParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [WorkspaceSymbolParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.module_declaration()
                pass
            elif token in [WorkspaceSymbolParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.interface_declaration()
                pass
            elif token in [WorkspaceSymbolParser.T__4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.program_declaration()
                pass
            elif token in [WorkspaceSymbolParser.T__6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.package_declaration()
                pass
            elif token in [WorkspaceSymbolParser.T__10, WorkspaceSymbolParser.T__11, WorkspaceSymbolParser.T__13, WorkspaceSymbolParser.T__15, WorkspaceSymbolParser.T__17]:
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.package_item()
                pass
            elif token in [WorkspaceSymbolParser.T__8]:
                self.enterOuterAlt(localctx, 6)
                self.state = 53
                self.config_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.IdentifierContext,0)


        def parameter_port_list(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Parameter_port_listContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_module_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_declaration" ):
                listener.enterModule_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_declaration" ):
                listener.exitModule_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_declaration" ):
                return visitor.visitModule_declaration(self)
            else:
                return visitor.visitChildren(self)




    def module_declaration(self):

        localctx = WorkspaceSymbolParser.Module_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(WorkspaceSymbolParser.T__0)
            self.state = 57
            self.identifier()
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 58
                self.parameter_port_list()


            self.state = 64
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 61
                    self.matchWildcard() 
                self.state = 66
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 67
            self.match(WorkspaceSymbolParser.T__1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.Colon:
                self.state = 68
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.IdentifierContext,0)


        def parameter_port_list(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Parameter_port_listContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_interface_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterface_declaration" ):
                listener.enterInterface_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterface_declaration" ):
                listener.exitInterface_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_declaration" ):
                return visitor.visitInterface_declaration(self)
            else:
                return visitor.visitChildren(self)




    def interface_declaration(self):

        localctx = WorkspaceSymbolParser.Interface_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_interface_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(WorkspaceSymbolParser.T__2)
            self.state = 72
            self.identifier()
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 73
                self.parameter_port_list()


            self.state = 79
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 76
                    self.matchWildcard() 
                self.state = 81
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 82
            self.match(WorkspaceSymbolParser.T__3)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.Colon:
                self.state = 83
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.IdentifierContext,0)


        def life_time(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Life_timeContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_program_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_declaration" ):
                listener.enterProgram_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_declaration" ):
                listener.exitProgram_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_declaration" ):
                return visitor.visitProgram_declaration(self)
            else:
                return visitor.visitChildren(self)




    def program_declaration(self):

        localctx = WorkspaceSymbolParser.Program_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_program_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(WorkspaceSymbolParser.T__4)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.T__20 or _la==WorkspaceSymbolParser.T__21:
                self.state = 87
                self.life_time()


            self.state = 90
            self.identifier()
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 91
                    self.matchWildcard() 
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 97
            self.match(WorkspaceSymbolParser.T__5)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.Colon:
                self.state = 98
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def package_item(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Package_itemContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_package_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_declaration" ):
                listener.enterPackage_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_declaration" ):
                listener.exitPackage_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_declaration" ):
                return visitor.visitPackage_declaration(self)
            else:
                return visitor.visitChildren(self)




    def package_declaration(self):

        localctx = WorkspaceSymbolParser.Package_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_package_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(WorkspaceSymbolParser.T__6)
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 102
                self.package_item()
                pass

            elif la_ == 2:
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 103
                        self.matchWildcard() 
                    self.state = 108
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass


            self.state = 111
            self.match(WorkspaceSymbolParser.T__7)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.Colon:
                self.state = 112
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.IdentifierContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_config_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig_declaration" ):
                listener.enterConfig_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig_declaration" ):
                listener.exitConfig_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig_declaration" ):
                return visitor.visitConfig_declaration(self)
            else:
                return visitor.visitChildren(self)




    def config_declaration(self):

        localctx = WorkspaceSymbolParser.Config_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_config_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(WorkspaceSymbolParser.T__8)
            self.state = 116
            self.identifier()
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 117
                    self.matchWildcard() 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 123
            self.match(WorkspaceSymbolParser.T__9)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.Colon:
                self.state = 124
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.IdentifierContext,0)


        def life_time(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Life_timeContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_class_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declaration" ):
                listener.enterClass_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declaration" ):
                listener.exitClass_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = WorkspaceSymbolParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.T__10:
                self.state = 127
                self.match(WorkspaceSymbolParser.T__10)


            self.state = 130
            self.match(WorkspaceSymbolParser.T__11)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.T__20 or _la==WorkspaceSymbolParser.T__21:
                self.state = 131
                self.life_time()


            self.state = 134
            self.identifier()
            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 135
                    self.matchWildcard() 
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

            self.state = 141
            self.match(WorkspaceSymbolParser.T__12)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.Colon:
                self.state = 142
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def task_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Task_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Function_declarationContext,0)


        def class_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Class_declarationContext,0)


        def type_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Type_declarationContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_package_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_item" ):
                listener.enterPackage_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_item" ):
                listener.exitPackage_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_item" ):
                return visitor.visitPackage_item(self)
            else:
                return visitor.visitChildren(self)




    def package_item(self):

        localctx = WorkspaceSymbolParser.Package_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_package_item)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [WorkspaceSymbolParser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.task_declaration()
                pass
            elif token in [WorkspaceSymbolParser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.function_declaration()
                pass
            elif token in [WorkspaceSymbolParser.T__10, WorkspaceSymbolParser.T__11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.class_declaration()
                pass
            elif token in [WorkspaceSymbolParser.T__17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.type_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Task_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.IdentifierContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_task_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTask_declaration" ):
                listener.enterTask_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTask_declaration" ):
                listener.exitTask_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTask_declaration" ):
                return visitor.visitTask_declaration(self)
            else:
                return visitor.visitChildren(self)




    def task_declaration(self):

        localctx = WorkspaceSymbolParser.Task_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_task_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(WorkspaceSymbolParser.T__13)
            self.state = 152
            self.identifier()
            self.state = 156
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 153
                    self.matchWildcard() 
                self.state = 158
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)

            self.state = 159
            self.match(WorkspaceSymbolParser.T__14)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.Colon:
                self.state = 160
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_val(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.Return_valContext,0)


        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.IdentifierContext,0)


        def OpenParen(self):
            return self.getToken(WorkspaceSymbolParser.OpenParen, 0)

        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = WorkspaceSymbolParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(WorkspaceSymbolParser.T__15)
            self.state = 164
            self.return_val()
            self.state = 165
            self.identifier()
            self.state = 166
            self.match(WorkspaceSymbolParser.OpenParen)
            self.state = 170
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,23,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 167
                    self.matchWildcard() 
                self.state = 172
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,23,self._ctx)

            self.state = 173
            self.match(WorkspaceSymbolParser.T__16)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolParser.Colon:
                self.state = 174
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolParser.IdentifierContext,0)


        def SemiColon(self):
            return self.getToken(WorkspaceSymbolParser.SemiColon, 0)

        def getRuleIndex(self):
            return WorkspaceSymbolParser.RULE_type_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_declaration" ):
                listener.enterType_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_declaration" ):
                listener.exitType_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
